adding pre-commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-.obsidian/workspace
-.obsidian/cache
 .obsidian/workspace.json
+# Obsidian runtime / UI state
+.obsidian/workspace*
+.obsidian/cache
+.obsidian/plugins/**/data.json
+.obsidian/plugins/**/main.js
+.obsidian/plugins/**/styles.css
+.obsidian/themes/**
 .DS_Store
